syntax="proto3";

package krpc.core.proto;
option java_package="krpc.core.proto";
option java_outer_classname="RpcMetas";
option java_multiple_files = true;

message RpcMeta {

    enum Direction { INVALID_DIRECTION = 0 ; REQUEST = 1; RESPONSE = 2; }
    Direction direction = 1;
    int32 serviceId = 2;
    int32 msgId = 3;
    int32 sequence = 4;
    int32 retCode = 5; // only for response
    string traceId = 6; // only for request
    string spanId = 7; // only for request two styles: parentSpanId:spanId or 0.1.1.1
    int32 sampled = 8; // sample flag 0=default(yes) 1=yes 2=no, only for request
    int32 timeout = 9;  // only for request
    string peers = 10; // only for request
    string attachment = 11; // only for request
    int32 compress = 12; // for both req/res, 0=no compress, 1=gzip 2=snappy

/*
    signature fields
    encrypt fields
    stressFlag
    clientId
*/

};